#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl_psana
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-06-25
2016-4-18 David Schneider
- update to pdsdata 8.6.8 with Andor::ConfigV2 JIRA PSAS-229

Tag: V00-06-24
2016-4-4 David Schneider
- update to pdsdata 8.6.7 with UsdUsb::FexConfigV1,FexDataV1, and Generic1D::ConfigV0,DataV0

Tag: V00-06-23
2016-2-5 David Schneider
- update to pdsdata 8.6.1 with Andor3d::FrameV1 (and ConfigV1) JIRA PSAS-214

Tag: V00-06-22
2015-12-10 David Schneider
- update to pdsdata 8.4.6 with modified Epix::Config100aV2 JIRA PSAS-198

Tag: V00-06-21
2015-6-26 David Schneider
- update to pdsdata 8.3.1 with Epix::Config100aV2, JIRA PSAS-166

Tag: V00-06-20
2015-5-28 David Schneider
- update to pdsdata 8.2.9 with BldDataSpectrometerV1 hproj int32 fix, JIRA PSAS-151

Tag: V00-06-19
2015-5-1 David Schneider
- update to pdsdata 8.2.7 with BldDataAnalogInputV1, JIRA PSAS-144

Tag: V00-06-18
2015-2-23 David Schneider
- update to pdsdata 8.2.4 with EvrDataV4 and present function

Tag: V00-06-17
2015-2-4 David Schneider
- update psddlc wrapper, JIRA PSAS-103

Tag: V00-06-16
2015-2-3 David Schneider
- change wrapper for psddl to Python, add devel option
- track JIRA PSAS-103.
	
Tag: V00-06-15
2015-2-2 David Schneider
- regenerate for new pdsdata 8.2.2 with EBeamV7 fix. Also OceanOptics DataV3 and 
  test bits on Quartz configV2 and smlData.
- track JIRA PSAS-103.

Tag: V00-06-14
2014-11-25 David Schneider
- regenerate for new pdsdata 8.1.10/psddldata V01-00-22 with TimeTool::ConfigV2, 
  TimeTool::DataV2, Quartz::ConfigV2
- Track JIRA issue PSAS-72

Tag: V00-06-13
2014-10-23 David Schneider